--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -179,6 +179,15 @@ a.sidebar-nav-item:focus {
 
 /* Red */
 .theme-base-08 .sidebar {
+  background-color: #333336;
+}
+.theme-base-08 .content a,
+.theme-base-08 .related-posts li a:hover {
+  color: #535580;
+}
+
+/* Red */
+.theme-base-08 .sidebar {
   background-color: #ac4142;
 }
 .theme-base-08 .content a,
