--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -32,5 +32,11 @@
         {% endif %}
       {% endfor %}
     </nav>
+
+    <div class="social-links">
+      <a href="https://scholar.google.com/citations?user=19dF3RQAAAAJ&hl=en"><img border="0" alt="scholar" src="{{ "/" | relative_url }}public/scholar.png" width="40" height="40"></a>
+      <a href="https://github.com/ferdianjovan"><img border="0" alt="github" src="{{ "/" | relative_url }}public/github.png" width="40" height="40"></a>
+      <a href="https://www.linkedin.com/in/ferdian-jovan"><img border="0" alt="linkedin" src="{{ "/" | relative_url }}public/linkedin.png" width="40" height="40"></a> </li>
+    </div>
   </div>
 </div>
