--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -96,9 +96,9 @@ html {
 /* About section */
 .sidebar-about h1 {
   color: #fff;
-  margin-top: 0;
+  margin-top: 10px;
   font-family: "Abril Fatface", serif;
-  font-size: 2.5rem;
+  font-size: 1.5rem;
 }
 
 /* Sidebar nav */
