--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -98,12 +98,13 @@ html {
   color: #fff;
   margin-top: 10px;
   font-family: "Abril Fatface", serif;
-  font-size: 1.5rem;
+  font-size: 2.0rem;
 }
 
 /* Sidebar nav */
 .sidebar-nav {
   margin-bottom: 1rem;
+  text-align: right;
 }
 .sidebar-nav-item {
   display: block;
