--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -3,7 +3,10 @@
     <div class="sidebar-about">
       <style>
         .photo {
-          max-width: 90%;
+          max-width: 70%;
+          display: block;
+          margin-left: auto;
+          margin-right: auto;
         }
       </style>
       <img src="{{ "/" | relative_url }}public/foto.jpg" class="photo" alt="Ferdian Jovan">
